--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 .block {
   width: 100%;
-  color: white;
+  color: black;
   text-transform: uppercase;
   font-size: 20px;
   height: 800px;
@@ -36,7 +36,7 @@ img {
 .block h2 {
   text-align: center;
   margin: 0 auto;
-  text-shadow: 0px 5px 5px black;
+  text-shadow: 0px 5px 5px white;
 }
 
 .animation-container {
